# tauri-lab

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src/lib/api/: settings.ts  todos.ts  workLogs.ts
src/lib/audio/: ambientSound.ts
src/lib/desktop/: globalShortcuts.ts  notifications.ts  windows.ts
