[package]
name = "tauri-lab"
version = "0.1.0"
description = "A Tauri + Svelte learning app"
authors = ["okaryo"]
edition = "2021"

[lib]
name = "tauri_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-notification = "2.3.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
